# flake8-pytest-style

./: .bumpversion.cfg  .gitignore  .pre-commit-hooks.yaml  .travis.yml  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  rule-request.md
.github/workflows/: ci.yml  pythonpackage.yml  release.yml
docs/rules/: PT001.md  PT002.md  PT003.md  PT004.md  PT005.md  PT006.md  PT007.md  PT008.md  PT009.md  PT010.md  PT011.md  PT012.md  PT013.md  PT014.md  PT015.md  PT016.md  PT017.md  PT018.md  PT019.md  PT020.md  PT021.md  PT022.md  PT023.md  PT024.md  PT025.md  PT026.md  PT027.md  PT028.md  PT029.md  PT030.md  PT031.md  PT032.md
flake8_pytest_style/: config.py  errors.py  plugin.py  utils.py  visitors.py
flake8_pytest_style/_vendor/flake8_plugin_utils/: __init__.py  plugin.py  utils.py
flake8_pytest_style/visitors/: __init__.py  assertion.py  callable_raises_warns_deprecatedcall.py  fail.py  fixtures.py  imports.py  marks.py  parametrize.py  patch.py  raises.py  t_functions.py  try_except.py  warns.py
scripts/: pypi_readme.py
tests/: test_PT001_incorrect_fixture_parentheses_style.py  test_PT001_missing_fixture_parentheses.py  test_PT002_fixture_positional_args.py  test_PT003_extraneous_scope_function.py  test_PT004_missing_fixture_name_underscore.py  test_PT005_incorrect_fixture_name_underscore.py  test_PT006_parametrize_names_wrong_type.py  test_PT007_parametrize_values_wrong_type.py  test_PT008_patch_with_lambda.py  test_PT009_no_bare_raises.py  test_PT009_unittest_assertion.py  test_PT010_no_bare_raises.py  test_PT010_raises_without_exception.py  test_PT011_raises_too_broad.py  test_PT011_raises_without_match.py  test_PT012_raises_with_multiple_statements.py  test_PT013_incorrect_pytest_import.py  test_PT014_duplicate_parametrize_test_cases.py  test_PT015_assert_always_false.py  test_PT016_fail_without_message.py  test_PT017_assert_in_except.py  test_PT018_composite_assertion.py  test_PT019_fixture_param_without_value.py  test_PT020_deprecated_yield_fixture.py  test_PT020_yield_fixture.py  test_PT021_fixture_finalizer_callback.py  test_PT022_useless_yield_fixture.py  test_PT023_incorrect_mark_parentheses_style.py  test_PT024_unncessary_asyncio_mark_on_fixture.py  test_PT025_erroneous_usefixtures_on_fixture.py  test_PT026_usefixtures_without_parameters.py  test_PT027_unittest_raises_assertion.py  test_PT028_test_function_argument_with_default.py  test_PT029_warns_without_warning.py  test_PT030_warns_too_broad.py  test_PT031_warns_with_multiple_statements.py  test_PT032_callable_raises.py  test_config.py  test_plugin.py
