[tool.poetry]
name = "flake8-pytest-style"
version = "1.7.2"
description = "A flake8 plugin checking common style issues or inconsistencies with pytest-based tests."
authors = ["Mikhail Burshteyn <mdburshteyn@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/m-burst/flake8-pytest-style"
homepage = "https://pypi.org/project/flake8-pytest-style"
keywords = ["flake8", "pytest"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Plugins",
  "Framework :: Flake8",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Unit",
]

[tool.poetry.plugins."flake8.extension"]
PT = 'flake8_pytest_style.plugin:PytestStylePlugin'

[tool.poetry.dependencies]
python = "^3.7.2"
flake8-plugin-utils = "^1.3.2"

[tool.poetry.dev-dependencies]
black = {version = "^23.3"}
bump2version = "^1.0.1"
flake8-awesome = ">=0.2.0"
mypy = "^1.1"
pylint = "^2.17"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-deadfixtures = "^2.1"
flake8 = "^4.0.1"
pytest-mock = "^3.6.0"
unify = "^0.5.0"
tomlkit = "^0.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
