[project]
name = "flake8-pytest-style"
version = "2.1.0"
description = "A flake8 plugin checking common style issues or inconsistencies with pytest-based tests."
authors = [
  { name = "Mikhail Burshteyn", email = "mdburshteyn@gmail.com" },
]
license = "MIT"
readme = 'README.md'
keywords = ["flake8", "pytest"]
dynamic = [
  "classifiers",
  "dependencies",
]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/m-burst/flake8-pytest-style"
homepage = "https://pypi.org/project/flake8-pytest-style"

[tool.poetry]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Plugins",
  "Framework :: Flake8",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Unit",
]

[project.entry-points."flake8.extension"]
PT = 'flake8_pytest_style.plugin:PytestStylePlugin'

[tool.poetry.dependencies]
python = "^3.10"
flake8-plugin-utils = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
bump2version = "^1.0.1"
mypy = ">=1.18.2"
pylint = "^4.0.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-deadfixtures = "^2.1"
flake8 = "^7.3.0"
pytest-mock = "^3.15.1"
tomlkit = ">=0.12.1,<0.14.0"

# The below group is taken from flake8-awesome with some exclusions
# that are irrelevant or unsupported.
# TODO remove Python version restriction after Bandit supports 3.14
# https://github.com/PyCQA/bandit/issues/1314
flake8-bandit = {version = "*", python="<3.14"}
flake8-breakpoint = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-eradicate = "*"
flake8-if-expr = "*"
flake8-isort = "*"
flake8-print = "*"
flake8-requirements = "*"
pep8-naming = "*"

# broken on 3.14+
# flake8-annotations-complexity = "*"

# broken on 3.14+
# flake8-expression-complexity = "*"

# kinda broken on 3.12+ (needs pkg_resources), not needed here
# flake8-logging-format = "*"

# functionality implemented in this plugin
# flake8-pytest = "*"

# actually this plugin
# flake8-pytest-style = "*"

# broken on 3.14+, and probably not needed with mypy
# flake8-return = "*"

# end of flake8-awesome

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
